# ffmpeg-msvc-build

./: .gitignore  .gitmodules  .travis.yml  0006-fix-StaticFeatures.patch  0011-Fix-x265-detection.patch  0012-Fix-ssl-110-detection.patch  10929.diff  9000-fix-cmake-platform-libs.patch  FFmpeg.GPL3.targets  FFmpeg.LGPL21.targets  FFmpeg.nuspec  FFmpeg.nuspec.in  README.md  SHA512  VCPKG_HASH.txt  VERSION  af_afstats_void.patch  appveyor.yml  build-test.bat  build.bat  build.ps1  build.sh  dvdec-restrict.patch  export.bat  export.ps1  ffmpeg-portfile-fix-debug-symbols.patch  ffmpeg-portfile-pdb.patch  ffmpeg-tag.bat  ffmpeg-tag.ps1  ffmpeg-update.bat  ffmpeg-update.ps1  functions.sh  github-actions-matrix.py  install.bat  libvpx-portfile-fix-pdb.patch  tag.sh  test-opencv4.sh  test-ports.sh  test.bat  test.sh  (+3 more)
.circleci/: build.bat  config.yml  test.bat  vcvars64.bat
.github/workflows/: ci.yml  test.yml
test/: .gitignore  CMakeLists.txt  CMakeSettings.json  avisynth.avi  avisynth.avs  avisynth2.avs  log.h  main.cpp  prores_bz2.mkv  prores_zlib.mkv  subtitle_bzip2.mkv  tiff_lzma.tif  tiff_zlib.tif
test/avcodec/: CMakeLists.txt  codec.h  find_decoder.cpp  find_encoder.cpp  list_all_codecs.cpp  open_decoder.cpp
test/avdevice/: CMakeLists.txt  find_output_video_device.cpp  list_all_devices.cpp
test/avfilter/: find_filter.cpp
test/avformat/: CMakeLists.txt  avcreate.h  decode.cpp  decode_image.cpp  decode_subtitle.cpp  find_format.cpp  format.h  list_all_protocols.cpp  readframe.cpp
test/avpp/avcodec/: avcodec.h  codec.h  packet.h
test/avpp/avdevice/: avdevice.h
test/avpp/avformat/: avformat.h
test/avpp/avutil/: dict.h  error.h  frame.h  log.h
test/avpp/util/: dict.h  error.h
test/avresample/: CMakeLists.txt  main.cpp
test/avutil/: CMakeLists.txt  create_hwdevice.cpp  main.cpp
test/cmake/avcodec/: CMakeLists.txt
test/cmake/avdevice/: CMakeLists.txt
test/cmake/avfilter/: CMakeLists.txt
test/cmake/avformat/: CMakeLists.txt
test/cmake/avutil/: CMakeLists.txt
test/cmake/postproc/: CMakeLists.txt
test/cmake/swresample/: CMakeLists.txt
test/pkgconfig/avcodec/: CMakeLists.txt
test/pkgconfig/avdevice/: CMakeLists.txt
test/pkgconfig/avfilter/: CMakeLists.txt
test/pkgconfig/avformat/: CMakeLists.txt
test/pkgconfig/avutil/: CMakeLists.txt
test/pkgconfig/postproc/: CMakeLists.txt
test/pkgconfig/swresample/: CMakeLists.txt
test/postproc/: CMakeLists.txt  main.cpp
test/src/: logger.h  simple_logger.h
test/src/avcodec/: codec.h  find_decoder.cpp  find_encoder.cpp  list_all_codecs.cpp  open_decoder.cpp
test/src/avdevice/: find_output_video_device.cpp  list_all_devices.cpp  main.cpp
test/src/avfilter/: find_filter.cpp  main.cpp
test/src/avformat/: decode.cpp  find_format.cpp  find_protocol.cpp  format.h  list_all_formats.cpp  list_all_protocols.cpp
test/src/avutil/: create_hwdevice.cpp  main.cpp
test/src/postproc/: main.cpp
test/src/swresample/: find_swr_engine.cpp  main.cpp
test/swresample/: CMakeLists.txt  main.cpp
