cmake_minimum_required(VERSION 3.12)
project(test_avcodec)
find_package(FFMPEG REQUIRED)
add_executable(test_find_decoder find_decoder.cpp)
target_link_libraries(test_find_decoder PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_find_decoder PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(test_find_encoder find_encoder.cpp)
target_link_libraries(test_find_encoder PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_find_encoder PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(list_all_codecs list_all_codecs.cpp)
target_link_libraries(list_all_codecs PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(list_all_codecs PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(test_open_decoder open_decoder.cpp)
target_link_libraries(test_open_decoder PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_open_decoder PRIVATE ${FFMPEG_INCLUDE_DIRS})
