cmake_minimum_required(VERSION 3.12)
project(test_avdevice)
find_package(FFMPEG REQUIRED)
add_executable(test_avdevice main.cpp)
target_link_libraries(test_avdevice PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_avdevice PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(list_all_devices list_all_devices.cpp)
target_link_libraries(list_all_devices PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(list_all_devices PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(test_avdevice test_avdevice)
