cmake_minimum_required(VERSION 3.17)
project(test_avformat)
find_package(FFMPEG REQUIRED)
add_executable(test_decode_image "decode_image.cpp")
target_link_libraries(test_decode_image PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_decode_image PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(test_decode_subtitle "decode_subtitle.cpp")
target_link_libraries(test_decode_subtitle PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_decode_subtitle PRIVATE ${FFMPEG_INCLUDE_DIRS})