cmake_minimum_required(VERSION 3.12)
project(test_avformat)
find_package(FFMPEG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
add_executable(test_decode "decode.cpp")
target_link_libraries(test_decode PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
target_link_libraries(test_decode PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_decode PRIVATE ${FFMPEG_INCLUDE_DIRS})