cmake_minimum_required(VERSION 3.12)
project(test_swresample)
find_package(FFMPEG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
add_executable(test_swresample main.cpp)
target_link_libraries(test_swresample PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
target_link_libraries(test_swresample PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_swresample PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(test_find_swr_engine find_swr_engine.cpp)
target_link_libraries(test_find_swr_engine PRIVATE spdlog::spdlog spdlog::spdlog_header_only)
target_link_libraries(test_find_swr_engine PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_find_swr_engine PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(test_swresample test_swresample)