cmake_minimum_required(VERSION 3.12)
set(TYPE cmake)
set(COMPONENT avdevice)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(FFMPEG REQUIRED)
find_package(fmt CONFIG REQUIRED)
add_executable            (${TEST}                          ${SRC_DIR}/main.cpp)
add_executable            (${TEST}_list_all_devices         ${SRC_DIR}/list_all_devices.cpp)
add_executable            (${TEST}_find_output_video_device ${SRC_DIR}/find_output_video_device.cpp)
target_link_libraries     (${TEST}                          PRIVATE ${FFMPEG_LIBRARIES} fmt::fmt)
target_link_libraries     (${TEST}_list_all_devices         PRIVATE ${FFMPEG_LIBRARIES} fmt::fmt)
target_link_libraries     (${TEST}_find_output_video_device PRIVATE ${FFMPEG_LIBRARIES} fmt::fmt)
target_include_directories(${TEST}                          PRIVATE ${FFMPEG_INCLUDE_DIRS})
target_include_directories(${TEST}_list_all_devices         PRIVATE ${FFMPEG_INCLUDE_DIRS})
target_include_directories(${TEST}_find_output_video_device PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(${TEST} ${TEST})
