cmake_minimum_required(VERSION 3.12)
project(test_avfilter)
find_package(FFMPEG REQUIRED)
add_executable(test_avfilter main.cpp)
target_link_libraries(test_avfilter PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_avfilter PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(test_find_filter find_filter.cpp)
target_link_libraries(test_find_filter PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_find_filter PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(test_avfilter test_avfilter)
