cmake_minimum_required(VERSION 3.12)
project(test_avutil)
find_package(FFMPEG REQUIRED)
add_executable(test_avutil main.cpp)
target_link_libraries(test_avutil PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_avutil PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_executable(test_create_hwdevice "create_hwdevice.cpp")
target_link_libraries(test_create_hwdevice PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(test_create_hwdevice PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(test_avutil test_avutil)
