cmake_minimum_required(VERSION 3.12)
set(TYPE cmake)
set(COMPONENT avutil)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(FFMPEG REQUIRED)
add_executable            (${TEST}                 ${SRC_DIR}/main.cpp)
add_executable            (${TEST}_create_hwdevice ${SRC_DIR}/create_hwdevice.cpp)
target_link_libraries     (${TEST}                 PRIVATE ${FFMPEG_LIBRARIES})
target_link_libraries     (${TEST}_create_hwdevice PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(${TEST}                 PRIVATE ${FFMPEG_INCLUDE_DIRS})
target_include_directories(${TEST}_create_hwdevice PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(${TEST} ${TEST})
