cmake_minimum_required(VERSION 3.12)
set(TYPE cmake)
set(COMPONENT postproc)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(FFMPEG REQUIRED)
add_executable(${TEST} ${SRC_DIR}/main.cpp)
target_link_libraries(${TEST} PRIVATE ${FFMPEG_LIBRARIES})
target_include_directories(${TEST} PRIVATE ${FFMPEG_INCLUDE_DIRS})
add_test(${TEST} ${TEST})
