cmake_minimum_required(VERSION 3.12)
set(TYPE pkgconfig)
set(COMPONENT avcodec)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(PkgConfig REQUIRED)
pkg_check_modules(AVCODEC REQUIRED IMPORTED_TARGET libavcodec)
find_package(fmt)
add_executable            (${TEST}_find_decoder    ${SRC_DIR}/find_decoder.cpp)
add_executable            (${TEST}_find_encoder    ${SRC_DIR}/find_encoder.cpp)
add_executable            (${TEST}_list_all_codecs ${SRC_DIR}/list_all_codecs.cpp)
add_executable            (${TEST}_open_decoder    ${SRC_DIR}/open_decoder.cpp)
target_link_libraries     (${TEST}_find_decoder    PRIVATE PkgConfig::AVCODEC fmt::fmt)
target_link_libraries     (${TEST}_find_encoder    PRIVATE PkgConfig::AVCODEC fmt::fmt)
target_link_libraries     (${TEST}_list_all_codecs PRIVATE PkgConfig::AVCODEC fmt::fmt)
target_link_libraries     (${TEST}_open_decoder    PRIVATE PkgConfig::AVCODEC fmt::fmt)
