cmake_minimum_required(VERSION 3.12)
set(TYPE pkgconfig)
set(COMPONENT avdevice)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(PkgConfig REQUIRED)
pkg_check_modules(AVDEVICE REQUIRED IMPORTED_TARGET libavdevice)
add_executable            (${TEST}                          ${SRC_DIR}/main.cpp)
add_executable            (${TEST}_list_all_devices         ${SRC_DIR}/list_all_devices.cpp)
add_executable            (${TEST}_find_output_video_device ${SRC_DIR}/find_output_video_device.cpp)
target_link_libraries     (${TEST}                          PRIVATE PkgConfig::AVDEVICE)
target_link_libraries     (${TEST}_list_all_devices         PRIVATE PkgConfig::AVDEVICE)
target_link_libraries     (${TEST}_find_output_video_device PRIVATE PkgConfig::AVDEVICE)
add_test(${TEST} ${TEST})
