cmake_minimum_required(VERSION 3.12)
set(TYPE pkgconfig)
set(COMPONENT avfilter)
set(TEST test_${TYPE}_${COMPONENT})
set(SRC_DIR ../../src/${COMPONENT})
project(${TEST})
find_package(PkgConfig REQUIRED)
pkg_check_modules(AVFILTER REQUIRED IMPORTED_TARGET libavfilter)
find_package(fmt CONFIG REQUIRED)
add_executable            (${TEST}             ${SRC_DIR}/main.cpp)
add_executable            (${TEST}_find_filter ${SRC_DIR}/find_filter.cpp)
target_link_libraries     (${TEST}             PRIVATE PkgConfig::AVFILTER fmt::fmt)
target_link_libraries     (${TEST}_find_filter PRIVATE PkgConfig::AVFILTER fmt::fmt)
add_test(${TEST} ${TEST})
